--- a/Server/sonar-project.properties
+++ b/Server/sonar-project.properties
@@ -1,16 +1,16 @@
 # Required metadata
-sonar.projectKey=org.codehaus.sonar:simple-c-project
+sonar.projectKey=ch.zhaw:simple-file-server
 sonar.projectName=Simple File Server
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=
+sonar.sources=src
 
 # Language
 sonar.language=c
 
-Optional comma-separated list of additional libraries folders (such as /usr/include)
-sonar.cfamily.library.directories=lib
+#Optional comma-separated list of additional libraries folders (such as /usr/include)
+sonar.cfamily.library.directories=lib,include
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
