exclude linked list, create cleanup thread

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -12,8 +12,14 @@ clean:
 server: $(MYSERVER_SOURCE) lib/libfileserver.a include/serverlib.h
 	gcc $(CFLAGS) $(MYSERVER_SOURCE) $(LIBS) -o $(MYSERVER_FILE)	
 
-lib/libfileserver.a: lib/serverlib.o lib/transmission-protocols.o lib/logger.o
-	ar crs lib/libfileserver.a lib/serverlib.o lib/transmission-protocols.o lib/logger.o
+lib/libfileserver.a: lib/serverlib.o lib/transmission-protocols.o lib/logger.o lib/file-linked-list.o lib/thread-linked-list.o
+	ar crs lib/libfileserver.a lib/serverlib.o lib/transmission-protocols.o lib/logger.o lib/file-linked-list.o lib/thread-linked-list.o
+
+lib/file-linked-list.o: lib/file-linked-list.c include/file-linked-list.h
+	gcc -c $(CFLAGS) lib/file-linked-list.c -o lib/file-linked-list.o
+	
+lib/thread-linked-list.o: lib/thread-linked-list.c include/thread-linked-list.h
+	gcc -c $(CFLAGS) lib/thread-linked-list.c -o lib/thread-linked-list.o	
 	
 lib/logger.o: lib/logger.c include/logger.h
 	gcc -c $(CFLAGS) lib/logger.c -o lib/logger.o		
